@@ -1,7 +1,7 @@
 //
 // ScopedLock.h
 //
-// $Id: //poco/1.4/Foundation/include/Poco/ScopedLock.h#1 $
+// $Id: //poco/1.4/Foundation/include/Poco/ScopedLock.h#2 $
 //
 // Library: Foundation
 // Package: Threading
@@ -50,13 +50,19 @@ template <class M>
 class ScopedLock
 	/// A class that simplifies thread synchronization
 	/// with a mutex.
-	/// The constructor accepts a Mutex and locks it.
+	/// The constructor accepts a Mutex (and optionally
+	/// a timeout value in milliseconds) and locks it.
 	/// The destructor unlocks the mutex.
 {
 public:
-	ScopedLock(M& mutex): _mutex(mutex)
+	explicit ScopedLock(M& mutex): _mutex(mutex)
 	{
 		_mutex.lock();
+	}
+	
+	ScopedLock(M& mutex, long milliseconds)
+	{
+		_mutex.lock(milliseconds);
 	}
 	
 	~ScopedLock()
@@ -77,15 +83,21 @@ template <class M>
 class ScopedLockWithUnlock
 	/// A class that simplifies thread synchronization
 	/// with a mutex.
-	/// The constructor accepts a Mutex and locks it.
+	/// The constructor accepts a Mutex (and optionally
+	/// a timeout value in milliseconds) and locks it.
 	/// The destructor unlocks the mutex.
 	/// The unlock() member function allows for manual
 	/// unlocking of the mutex.
 {
 public:
-	ScopedLockWithUnlock(M& mutex): _pMutex(&mutex)
+	explicit ScopedLockWithUnlock(M& mutex): _pMutex(&mutex)
 	{
 		_pMutex->lock();
+	}
+	
+	ScopedLockWithUnlock(M& mutex, long milliseconds)
+	{
+		_pMutex->lock(milliseconds);
 	}
 	
 	~ScopedLockWithUnlock()
