@@ -70,6 +70,8 @@ Release 1.4.3 (2012-01-xx)
 - Fixed a WinCE-specific bug in Poco::Util::ServerApplication where uninitialize() would
   be called twice.
 - fixed SF# 3471957: WinRegistryKey::deleteKey() unable to delete alt views
+- Added additional constructor to Poco::ScopedLock and Poco::ScopedLockWithUnlock 
+  accepting a timeout as second argument. 
 
 
 Release 1.4.2p1 (2011-09-24)
@@ -1665,4 +1667,4 @@ building the libraries.
 
 
 --
-$Id: //poco/1.4/dist/CHANGELOG#52 $
+$Id: //poco/1.4/dist/CHANGELOG#53 $
